--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <section class="links">
         <h2 id="contact"</h2>
         <ul>
-          <li><a target="blank" href="https://www.linkedin.com/in/andreahudaky/" title="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true" id="linkedin"></i></a></li>
-          <li><a target="blank" href="https://github.com/Paradoxismyalt" title="github"><i class="fa fa-github" aria-hidden="true" id="github"></i></a></li>
-          <li><a target="blank" href="https://www.instagram.com/paradoxismynormal/" title="instagram"><i class="fa fa-instagram" aria-hidden="true" id="instagram"></i></a></li>
+          <li><a target="_blank" href="https://www.linkedin.com/in/andreahudaky/" title="LinkedIn"><i class="fa fa-linkedin" aria-hidden="true" id="linkedin"></i></a></li>
+          <li><a target="_blank" href="https://github.com/Paradoxismyalt" title="github"><i class="fa fa-github" aria-hidden="true" id="github"></i></a></li>
+          <li><a target="_blank" href="https://www.instagram.com/paradoxismynormal/" title="instagram"><i class="fa fa-instagram" aria-hidden="true" id="instagram"></i></a></li>
         </ul>
       </section>
       </div>
